updated the cors config in the securityconfig file and reduced allowed origins to only localhost port 3000